initial set of social media links

--- a/index.html
+++ b/index.html
@@ -39,32 +39,15 @@
 
         <div class="cover-container">
 
-          <div class="masthead clearfix">
-            <div class="inner">
-              <h3 class="masthead-brand">Paul Seward</h3>
-              <nav>
-                <ul class="nav masthead-nav">
-                  <li class="active"><a href="#">Home</a></li>
-                  <!--li><a href="#">Features</a></li-->
-                  <!--li><a href="#">Contact</a></li-->
-                </ul>
-              </nav>
-            </div>
-          </div>
-
           <div class="inner cover">
-            <h1 class="cover-heading">Hello!</h1>
-            <p class="lead">Or goodbye, depending on your perspective.</p>
-            <p class="lead">I don't really post anything here any more, so instead here's a list of links to places that I do post:<p>
+            <h1 class="cover-heading">Paul Seward</h1>
             <p class="lead">
-              <!--a href="#" class="btn btn-lg btn-default">Learn more</a-->
-            </p>
-          </div>
-
-          <div class="mastfoot">
-            <div class="inner">
-              <!--p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p-->
-            </div>
+	      <a href="https://github.com/paulseward" title="GitHub"><img src="social/github.png"/></a>
+	      <a href="https://www.youtube.com/user/lpbkdotnet/videos?shelf_id=0&view=0&sort=dd" title="YouTube"><img src="social/youtube.png"/></a>
+	      <a href="https://www.instagram.com/seward.paul/" title="Instagram"><img src="social/instagram.png"/></a>
+	      <a href="http://unix.bris.ac.uk" title="Unix at the University of Bristol"><img src="social/wordpress.png"/></a>
+	      <a href="http://dfrvoip.org.uk" title="VoIP phones at the Forest of Dean Steam Railway"><img src="social/wordpress.png"/></a>
+            <p>
           </div>
 
         </div>
