absolute rather than relative links, makes old subdirs work better

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
           <div class="inner cover">
             <h1 class="cover-heading">Paul Seward</h1>
             <p class="lead">
-	      <a href="https://github.com/paulseward" title="GitHub"><img src="social/github.png"/></a>
-	      <a href="https://www.youtube.com/user/lpbkdotnet/videos?shelf_id=0&view=0&sort=dd" title="YouTube"><img src="social/youtube.png"/></a>
-	      <a href="https://www.instagram.com/seward.paul/" title="Instagram"><img src="social/instagram.png"/></a>
-	      <a href="http://unix.bris.ac.uk" title="Unix at the University of Bristol"><img src="social/wordpress.png"/></a>
-	      <a href="http://dfrvoip.org.uk" title="VoIP phones at the Forest of Dean Steam Railway"><img src="social/wordpress.png"/></a>
+	      <a href="https://github.com/paulseward" title="GitHub"><img src="/social/github.png"/></a>
+	      <a href="https://www.youtube.com/user/lpbkdotnet/videos?shelf_id=0&view=0&sort=dd" title="YouTube"><img src="/social/youtube.png"/></a>
+	      <a href="https://www.instagram.com/seward.paul/" title="Instagram"><img src="/social/instagram.png"/></a>
+	      <a href="http://unix.bris.ac.uk" title="Unix at the University of Bristol"><img src="/social/wordpress.png"/></a>
+	      <a href="http://dfrvoip.org.uk" title="VoIP phones at the Forest of Dean Steam Railway"><img src="/social/wordpress.png"/></a>
             <p>
           </div>
 
