--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <p>
             <p class="lead">
               Professional<br/>
+	      <a href="http://www.linkedin.com/in/paul-seward" title="Paul Seward on LinkedIn"><img src="/social/linkedin.png"/></a>
 	      <a href="https://github.com/uobnetops" title="GitHub"><img src="/social/github.png"/></a>
 	      <a href="http://unix.bris.ac.uk" title="Unix at the University of Bristol"><img src="/social/wordpress.png"/></a>
             <p>
