removing UoB from professional section, and adding gitlab to personal

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <p class="lead">
               Personal<br/>
 	      <a href="https://github.com/paulseward" title="GitHub"><img src="/social/github.png"/></a>
+	      <a href="https://gitlab.com/paulseward" title="GitHub"><img src="/social/gitlab.png"/></a>
 	      <a href="https://www.youtube.com/user/lpbkdotnet/videos?shelf_id=0&view=0&sort=dd" title="YouTube"><img src="/social/youtube.png"/></a>
 	      <a href="https://www.instagram.com/seward.paul/" title="Instagram"><img src="/social/instagram.png"/></a>
 	      <a href="http://dfrvoip.org.uk" title="VoIP phones at the Forest of Dean Steam Railway"><img src="/social/wordpress.png"/></a>
@@ -51,8 +52,6 @@
             <p class="lead">
               Professional<br/>
 	      <a href="http://www.linkedin.com/in/paul-seward" title="Paul Seward on LinkedIn"><img src="/social/linkedin.png"/></a>
-	      <a href="https://github.com/uobnetops" title="GitHub"><img src="/social/github.png"/></a>
-	      <a href="http://unix.bris.ac.uk" title="Unix at the University of Bristol"><img src="/social/wordpress.png"/></a>
             <p>
           </div>
 
