minor layout tweaks

--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
 
           <div class="inner cover">
             <h1 class="cover-heading">Paul Seward</h1>
-            <p class="lead">
-              Personal<br/>
+            <p class="lead">Personal</p>
+            <p>
 	      <a href="https://github.com/paulseward" title="GitHub"><img src="/social/github.png"/></a>
 	      <a href="https://gitlab.com/paulseward" title="GitHub"><img src="/social/gitlab.png"/></a>
 	      <a href="https://www.youtube.com/user/lpbkdotnet/videos?shelf_id=0&view=0&sort=dd" title="YouTube"><img src="/social/youtube.png"/></a>
 	      <a href="https://www.instagram.com/seward.paul/" title="Instagram"><img src="/social/instagram.png"/></a>
 	      <a href="http://dfrvoip.org.uk" title="VoIP phones at the Forest of Dean Steam Railway"><img src="/social/wordpress.png"/></a>
+            </p>
+            <p class="lead">Professional</p>
             <p>
-            <p class="lead">
-              Professional<br/>
 	      <a href="http://www.linkedin.com/in/paul-seward" title="Paul Seward on LinkedIn"><img src="/social/linkedin.png"/></a>
-            <p>
+            </p>
           </div>
 
         </div>
