--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 	      <a href="https://gitlab.com/paulseward" title="GitHub"><img src="/social/gitlab.png"/></a>
 	      <a href="https://www.youtube.com/user/lpbkdotnet/videos?shelf_id=0&view=0&sort=dd" title="YouTube"><img src="/social/youtube.png"/></a>
 	      <a href="https://www.instagram.com/seward.paul/" title="Instagram"><img src="/social/instagram.png"/></a>
-	      <a href="http://dfrvoip.org.uk" title="VoIP phones at the Forest of Dean Steam Railway"><img src="/social/wordpress.png"/></a>
             </p>
             <p class="lead">Professional</p>
             <p>
 	      <a href="http://www.linkedin.com/in/paul-seward" title="Paul Seward on LinkedIn"><img src="/social/linkedin.png"/></a>
+	      <a href="https://www.credential.net/profile/paulseward/wallet"><img src="/social/credentials.png"/></a>
             </p>
           </div>
 
