Index: fixing tumblr link

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	      <a href="https://gitlab.com/paulseward" title="GitHub"><img src="/social/gitlab.png"/></a>
 	      <a href="https://www.youtube.com/user/lpbkdotnet/videos?shelf_id=0&view=0&sort=dd" title="YouTube"><img src="/social/youtube.png"/></a>
 	      <a href="https://www.instagram.com/seward.paul/" title="Instagram"><img src="/social/instagram.png"/></a>
-	      <a href="https://https://uktelephones.tumblr.com/" title="Tumblr - UK Telephones"><img src="/social/tumblr.png"/></a>
+	      <a href="https://uktelephones.tumblr.com/" title="Tumblr - UK Telephones"><img src="/social/tumblr.png"/></a>
             </p>
             <p class="lead">Professional</p>
             <p>
