Index: fixed up linkedin url, added title to gcp certs link

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             </p>
             <p class="lead">Professional</p>
             <p>
-	      <a href="http://www.linkedin.com/in/paul-seward" title="Paul Seward on LinkedIn"><img src="/social/linkedin.png"/></a>
-	      <a href="https://www.credential.net/profile/paulseward/wallet"><img src="/social/credentials.png"/></a>
+	      <a href="https://www.linkedin.com/in/paul-seward" title="Paul Seward on LinkedIn"><img src="/social/linkedin.png"/></a>
+	      <a href="https://www.credential.net/profile/paulseward/wallet" title="GCP Certification"><img src="/social/credentials.png"/></a>
             </p>
           </div>
 
